# Dreams-RNS-CUDA

./: .gitignore  CMakeLists.txt  README.md
examples/: example_cmfs.py
include/dreams/: cmf_program.h  config.h  eval_kernel.h  topk_kernel.h  walk_kernel.h
notebooks/: dreams_colab.ipynb
python/: a100_sweep.py  euler2ai_full_verify.py  euler2ai_verify.py  odd_zeta_cmf_generator.py  odd_zeta_exact.py  odd_zeta_run.py  odd_zeta_shifts.json  odd_zeta_specs.jsonl  odd_zeta_sweep.py  setup.py  zeta_axis_search.py
python/axis_search_results/: zeta_5_axis_hits.json  zeta_5_axis_search.jsonl  zeta_7_axis_hits.json  zeta_7_axis_search.jsonl
python/dreams_rns/: __init__.py  analysis.py  cmf_walk.py  compiler.py  constants.py  gpu_walk.py  runner.py
python/odd_zeta_exact_results/: odd_zeta_exact_results.jsonl
python/odd_zeta_results/: odd_zeta_results.jsonl
scripts/: lambda_a100_setup.sh  lambda_a100_update.sh  lambda_odd_zeta_exhaust.sh
src/cuda/: persistent_kernel.cu
sweep_data/3F2/: 3F2_part00.jsonl
sweep_data/shifts/: dim5_shifts.json
sweep_data/trajectories/: dim5_trajectories.json
tests/: test_matmul_crt.cpp  test_persistent.cpp
